@@ -1,37 +1,33 @@
 package controller;
 
-import dao.AccountDAO;
-import dao.OrderDAO;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.annotation.WebServlet;
 import jakarta.servlet.http.HttpServlet;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import jakarta.servlet.http.HttpSession;
-import model.Account;
-import model.Order;
+import service.AccountManagementService;
 
 import java.io.IOException;
-import java.util.List;
-import java.util.stream.Collectors;
+import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
-/**
- * Admin: Manage customers (list, search, view order history, block/unblock).
- */
 @WebServlet(name = "ManageCustomerServlet", urlPatterns = {"/admin/customers"})
 public class ManageCustomerServlet extends HttpServlet {
 
-    private static final String ROLE_CUSTOMER = "customer";
+    private AccountManagementService accountManagementService;
+
+    @Override
+    public void init() throws ServletException {
+        this.accountManagementService = new AccountManagementService();
+    }
 
     @Override
     protected void doGet(HttpServletRequest req, HttpServletResponse resp)
             throws ServletException, IOException {
-
         HttpSession session = req.getSession(false);
         String role = (session != null) ? (String) session.getAttribute("role") : null;
 
-        // Chỉ admin được truy cập
-                // Chỉ admin được truy cập
         if (!"admin".equals(role)) {
             resp.sendRedirect(req.getContextPath() + "/login");
             return;
@@ -40,14 +36,12 @@ public class ManageCustomerServlet extends HttpServlet {
         String keyword = req.getParameter("search");
         String action = req.getParameter("action");
 
-        // === Xem lịch sử đơn hàng của 1 khách ===
         if ("viewOrders".equals(action)) {
             handleViewOrders(req, resp, session);
             return;
         }
 
-        // === Mặc định: hiển thị danh sách / search ===
-        handleList(req, keyword, session);
+        handleList(req, keyword);
 
         req.getRequestDispatcher("/admin/manage-customers.jsp").forward(req, resp);
     }
@@ -55,7 +49,6 @@ public class ManageCustomerServlet extends HttpServlet {
     @Override
     protected void doPost(HttpServletRequest req, HttpServletResponse resp)
             throws ServletException, IOException {
-
         HttpSession session = req.getSession(false);
         String role = (session != null) ? (String) session.getAttribute("role") : null;
 
@@ -70,43 +63,21 @@ public class ManageCustomerServlet extends HttpServlet {
             handleToggleStatus(req, session);
         }
 
-        // Quay lại trang danh sách
         String keyword = req.getParameter("searchKeyword");
-        resp.sendRedirect(req.getContextPath() + "/admin/customers"
-                + (keyword != null && !keyword.trim().isEmpty() ? "?search=" + java.net.URLEncoder.encode(keyword.trim(), "UTF-8") : ""));
+        String redirectUrl = req.getContextPath() + "/admin/customers"
+                + (keyword != null && !keyword.trim().isEmpty()
+                    ? "?search=" + URLEncoder.encode(keyword.trim(), StandardCharsets.UTF_8) : "");
+        resp.sendRedirect(redirectUrl);
     }
 
-    // ================================================================
-    //  Xử lý hiển thị danh sách khách hàng
-    // ================================================================
-    private void handleList(HttpServletRequest req, String keyword, HttpSession session) {
+    private void handleList(HttpServletRequest req, String keyword) {
         try {
-            AccountDAO dao = new AccountDAO();
-            try {
-                List<Account> customers;
-                if (keyword != null && !keyword.trim().isEmpty()) {
-                    customers = dao.searchAccountsByRole(ROLE_CUSTOMER, keyword.trim());
-                    req.setAttribute("searchKeyword", keyword.trim());
-                } else {
-                    customers = dao.getAccountsByRole(ROLE_CUSTOMER);
-                }
-
-                // Đếm số đơn hàng của mỗi khách (hiển thị badge)
-                OrderDAO orderDAO = new OrderDAO();
-                try {
-                    for (Account c : customers) {
-                        List<Order> orders = orderDAO.getOrdersByCustomerId(c.getId());
-                        c.setExtra("orderCount", orders.size());
-                    }
-                } finally {
-                    orderDAO.close();
-                }
-
-                req.setAttribute("customers", customers);
-                req.setAttribute("totalCount", customers.size());
-
-            } finally {
-                dao.close();
+            AccountManagementService.CustomerListResult result =
+                    accountManagementService.getCustomerList(keyword);
+            req.setAttribute("customers", result.getCustomers());
+            req.setAttribute("totalCount", result.getTotalCount());
+            if (keyword != null && !keyword.trim().isEmpty()) {
+                req.setAttribute("searchKeyword", keyword.trim());
             }
         } catch (Exception e) {
             System.err.println("[ManageCustomerServlet] handleList error: " + e.getMessage());
@@ -116,12 +87,8 @@ public class ManageCustomerServlet extends HttpServlet {
         }
     }
 
-    // ================================================================
-    //  Xem lịch sử đơn hàng của 1 khách hàng
-    // ================================================================
     private void handleViewOrders(HttpServletRequest req, HttpServletResponse resp, HttpSession session)
             throws ServletException, IOException {
-
         String idParam = req.getParameter("id");
         if (idParam == null || idParam.trim().isEmpty()) {
             session.setAttribute("error", "ID khách hàng không hợp lệ.");
@@ -139,33 +106,18 @@ public class ManageCustomerServlet extends HttpServlet {
         }
 
         try {
-            AccountDAO accountDAO = new AccountDAO();
-            Account customer;
-            try {
-                customer = accountDAO.findByIdIncludeAll(customerId);
-            } finally {
-                accountDAO.close();
-            }
+            AccountManagementService.CustomerOrderHistoryResult result =
+                    accountManagementService.getCustomerOrderHistory(customerId);
 
-            if (customer == null || !"customer".equals(customer.getRoleName())) {
+            if (!result.isFound()) {
                 session.setAttribute("error", "Không tìm thấy khách hàng.");
                 resp.sendRedirect(req.getContextPath() + "/admin/customers");
                 return;
             }
 
-            OrderDAO orderDAO = new OrderDAO();
-            List<Order> orders;
-            try {
-                orders = orderDAO.getOrdersByCustomerId(customerId);
-            } finally {
-                orderDAO.close();
-            }
-
-            req.setAttribute("customer", customer);
-            req.setAttribute("orders", orders);
+            req.setAttribute("customer", result.getCustomer());
+            req.setAttribute("orders", result.getOrders());
             req.getRequestDispatcher("/admin/customer-orders.jsp").forward(req, resp);
-            return;
-
         } catch (Exception e) {
             System.err.println("[ManageCustomerServlet] handleViewOrders error: " + e.getMessage());
             e.printStackTrace();
@@ -174,9 +126,6 @@ public class ManageCustomerServlet extends HttpServlet {
         }
     }
 
-    // ================================================================
-    //  Khóa / Mở khóa tài khoản
-    // ================================================================
     private void handleToggleStatus(HttpServletRequest req, HttpSession session) {
         String idParam = req.getParameter("id");
         if (idParam == null || idParam.trim().isEmpty()) {
@@ -184,48 +133,20 @@ public class ManageCustomerServlet extends HttpServlet {
             return;
         }
 
-        int accountId;
         try {
-            accountId = Integer.parseInt(idParam.trim());
+            int accountId = Integer.parseInt(idParam.trim());
+            Integer currentUserId = (Integer) session.getAttribute("userId");
+
+            AccountManagementService.ToggleStatusResult result =
+                    accountManagementService.toggleAccountStatus(accountId, currentUserId);
+
+            if (result.isSuccess()) {
+                session.setAttribute("message", result.getMessage());
+            } else {
+                session.setAttribute("error", result.getMessage());
+            }
         } catch (NumberFormatException e) {
             session.setAttribute("error", "ID tài khoản phải là số.");
-            return;
-        }
-
-        // Không cho admin tự khóa chính mình
-        Integer currentUserId = (Integer) session.getAttribute("userId");
-        if (currentUserId != null && currentUserId == accountId) {
-            session.setAttribute("error", "Bạn không thể khóa chính mình.");
-            return;
-        }
-
-        try {
-            AccountDAO dao = new AccountDAO();
-            try {
-                Account acc = dao.findByIdIncludeAll(accountId);
-                if (acc == null) {
-                    session.setAttribute("error", "Không tìm thấy tài khoản.");
-                    return;
-                }
-
-                // Chỉ khóa/mở khóa tài khoản customer
-                if (!"customer".equals(acc.getRoleName())) {
-                    session.setAttribute("error", "Chỉ có thể khóa/mở khóa tài khoản khách hàng.");
-                    return;
-                }
-
-                int newStatus = (acc.getStatus() == 1) ? 0 : 1;
-                boolean success = dao.updateAccountStatus(accountId, newStatus);
-
-                if (success) {
-                    String action = (newStatus == 0) ? "khóa" : "mở khóa";
-                    session.setAttribute("message", "Đã " + action + " tài khoản thành công.");
-                } else {
-                    session.setAttribute("error", "Không thể cập nhật trạng thái tài khoản.");
-                }
-            } finally {
-                dao.close();
-            }
         } catch (Exception e) {
             System.err.println("[ManageCustomerServlet] handleToggleStatus error: " + e.getMessage());
             e.printStackTrace();
